kube/services/netpolicy/networkpolicy_jenkins_templ.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-jenkins
spec:
  podSelector:
    matchLabels:
      app: jenkins
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: jenkins
      - ipBlock:
           cidr: 0.0.0.0/0
      ports:
         - port: 80
         - port: 443
  egress:
    - {}
  policyTypes:
   - Ingress
   - Egress
